--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sobre mim</title>
-</head>
+<head>
 <body>
-    
+<h1>Sofia Dias muniz</h1>
+<p>Me chamo sofia,tenho 15 anos,faço aniversário no dia 09 de setembro,gosto de jogar volei e de escutar música, minha cor favorita é azul.</p>
+<h2>Meus melhores amigos</h2>
+<p>Ana Isabela,Emilly e Sophia.</p>
+<h3>Minhas matérias favoritas</h3>
+<p>Educação física,biologia e física.</p>
 </body>
 </html>
